--- a/.gitignore
+++ b/.gitignore
@@ -1,134 +1,49 @@
-
-.python-version
-
-*.py[cod]
-
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-var
-sdist
-develop-eggs
-.installed.cfg
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-
-# Translations
-#*.mo
-
-#Mr Developer
-.mr.developer.cfg
-
-# Mine own
-*.sublime-project
-*.sublime-workspace
-.idea
-.tags
-.tags_sorted_by_file
-.ropeproject
-.project
-.pydevproject
-.settings
-build
-dist
-.svn
-*.swp
-*.swo
-*.bak
-*~
+#                         d88b
+#                         8`'8
+# .d8888b. .d8888b.       d8b        .d8888b. 88d888b. 88d888b. .d8888b.
+# 88'  `88 Y8ooooo.     d8P`8b       88'  `88 88'  `88 88'  `88 Y8ooooo.
+# 88.  .88       88     d8' `8bP     88.  .88 88.  .88 88.  .88       88
+# `88888P' `88888P'     `888P'`YP    `88888P8 88Y888P' 88Y888P' `88888P'
+#                                             88       88
+#                                             dP       dP                                                             dP       dP
 .DS_Store
 ._*
-.sass-cache
+Icon
+
 
 # Dropbox
 .dropbox.attr
 
+#                dP oo   dP
+#                88      88
+# .d8888b. .d888b88 dP d8888P .d8888b. 88d888b. .d8888b.
+# 88ooood8 88'  `88 88   88   88'  `88 88'  `88 Y8ooooo.
+# 88.  ... 88.  .88 88   88   88.  .88 88             88
+# `88888P' `88888P8 dP   dP   `88888P' dP       `88888P'
 
-# Created by https://www.gitignore.io/api/sublimetext,vim,python
-
-### SublimeText ###
-# cache files for sublime text
-*.tmlanguage.cache
-*.tmPreferences.cache
-*.stTheme.cache
-
-# project files should be checked into the repository, unless a significant
-# proportion of contributors will probably not be using SublimeText
-# *.sublime-project
-
-# sftp configuration file
-sftp-config.json
-
-
-### Vim ###
-[._]*.s[a-w][a-z]
-[._]s[a-w][a-z]
-*.un~
-Session.vim
-.netrwhist
+*.sublime-project
+*.sublime-workspace
+*.swp
+*.swo
+*.bak
 *~
 
 
-### Python ###
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*$py.class
+#                     dP   dP
+#                     88   88
+# 88d888b. dP    dP d8888P 88d888b. .d8888b. 88d888b.
+# 88'  `88 88    88   88   88'  `88 88'  `88 88'  `88
+# 88.  .88 88.  .88   88   88    88 88.  .88 88    88
+# 88Y888P' `8888P88   dP   dP    dP `88888P' dP    dP
+# 88            .88
+# dP        d8888P
 
-# C extensions
-*.so
+# pyenv
+.python-version
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-eggs/
-.eggs/
-sdist/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Compiled Python files
+*.py[cod]
 
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
-.hypothesis/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
